Partial_14Dec2021/force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit(O)</label>
    <nameField>
        <displayFormat>VN-{0}</displayFormat>
        <label>Visit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits(O)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>