Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;), Distributor_Dealer__r.Area__c, IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;), Distributor_Dealer__r.Area__c, IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;), Contacts__r.Area__c, IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;), Project_Name__r.Area__c ,&apos; &apos;))))</formula>
    <label>Area</label>
    <type>Text</type>
</CustomField>