Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Ashirvad_Representative2__c.field-meta.xml
<CustomField>
    <fullName>Ashirvad_Representative2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ashirvad Representative2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>