Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/CheckFlag__c.field-meta.xml
<CustomField>
    <fullName>CheckFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CheckFlag</label>
    <type>Checkbox</type>
</CustomField>