Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;),  Distributor_Dealer__r.City__c, IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;),  Distributor_Dealer__r.City__c, IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;),  Contacts__r.City__c, IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;),  Project_Name__r.City__c ,&apos; &apos;))))</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>