Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/CityText__c.field-meta.xml
<CustomField>
    <fullName>CityText__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>