Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Raised_Complaint__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Wrong/Invalid Number</fullName>
                <color>#330000</color>
                <label>Wrong/Invalid Number</label>
            </value>
            <value>
                <fullName>Not Attended</fullName>
                <color>#FF6600</color>
                <label>Not Attended</label>
            </value>
            <value>
                <fullName>BDM Response Poor</fullName>
            </value>
            <value>
                <fullName>Supply not in Time</fullName>
            </value>
            <value>
                <fullName>Service Poor</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>