Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;), IF( ISBLANK(Distributor_Dealer__r.Mobile__c),  Distributor_Dealer__r.Phone__c, Distributor_Dealer__r.Mobile__c),
IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;), IF( ISBLANK(Distributor_Dealer__r.Mobile__c),  Distributor_Dealer__r.Phone__c, Distributor_Dealer__r.Mobile__c),
IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;), IF( ISBLANK(Contacts__r.Mobile__c), Contacts__r.Phone__c, Contacts__r.Mobile__c),
IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;), IF(ISBLANK(Project_Name__r.Contact_Name__r.Mobile__c),   Project_Name__r.Contact_Name__r.Phone__c, Project_Name__r.Contact_Name__r.Mobile__c),&apos; &apos;))))</formula>
    <label>Contact No.</label>
    <type>Text</type>
</CustomField>