Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;), Distributor_Dealer__r.Contact_Person__c, IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;), Distributor_Dealer__r.Contact_Person__c, 
IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;),  Contacts__r.Name, IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;), Project_Name__r.Contact_Name__r.Name,&apos; &apos;))))</formula>
    <label>Contact Person</label>
    <type>Text</type>
</CustomField>