Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OwnerId</field>
            <operation>equals</operation>
            <valueField>Contacts__c.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contacts__c</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>