Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Del_Nature_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Del_Nature_of_Visit__c</fullName>
    <label>Del Nature of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head Quarter</fullName>
            </value>
            <value>
                <fullName>Ex-Station</fullName>
            </value>
            <value>
                <fullName>Out Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>