Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Distributor_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>Distributor_Dealer__c.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>