Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Distributors_Dealers_Status__c.field-meta.xml
<CustomField>
    <fullName>Distributors_Dealers_Status__c</fullName>
    <formula>TEXT(Distributor_Dealer__r.Status__c)</formula>
    <label>Distributors/Dealers Status</label>
    <type>Text</type>
</CustomField>