Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Last_60_Days_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_60_Days_Visit__c</fullName>
    <formula>IF(Today()-60&gt;Date__c, 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 60 Days Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>