Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;),  Distributor_Dealer__r.Mobile__c, IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;),  Distributor_Dealer__r.Mobile__c, IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;),  Contacts__r.Mobile__c, IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;),  Project_Name__r.Contact_Name__r.Mobile__c,&apos; &apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No.</label>
    <type>Text</type>
</CustomField>