Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Nature_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Visit__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;), Text(Distributor_Dealer__r.Visit_Type__c), 
IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;), Text(Distributor_Dealer__r.Visit_Type__c), IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;), Text(Contacts__r.Visit_Type__c), IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;), Text( Project_Name__r.Visit_Type__c),IF(ISPICKVAL( Type__c, &apos;Non Visit&apos;), Text( Reason_for_Non_Visit__c),&apos; &apos;)))))</formula>
    <label>Nature of Visit</label>
    <type>Text</type>
</CustomField>