Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/No_of_days_spent__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_spent__c</fullName>
    <formula>IF( ISPICKVAL(Visit_Type__c , &quot;Head Quarter&quot;), 1, 0) + IF(ISPICKVAL( Visit_Type__c , &quot;Ex-Station&quot;), 1, 0) + IF(ISPICKVAL( Visit_Type__c , &quot;Out Station&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No:of days spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>