Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/No_of_spent_in_Hq__c.field-meta.xml
<CustomField>
    <fullName>No_of_spent_in_Hq__c</fullName>
    <formula>IF( ISPICKVAL(Visit_Type__c , &quot;Head Quarter&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No:of spent in Hq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>