Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/No_Visit_Flag__c.field-meta.xml
<CustomField>
    <fullName>No_Visit_Flag__c</fullName>
    <formula>IF(AND(Month(Date__c) = Month(Today()), Year(Date__c) = Year(Today())), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Visit Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>