Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Not_Visited__c.field-meta.xml
<CustomField>
    <fullName>Not_Visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Visited</label>
    <type>Checkbox</type>
</CustomField>