Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <inlineHelpText>Order value is required if purpose of visit is for New Order Booking. Order value should be more than 5000/-</inlineHelpText>
    <label>Order Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>