Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c, &apos;Distributor&apos;),  Distributor_Dealer__r.Name, IF(ISPICKVAL(Visit_To__c, &apos;Dealer&apos;),  Distributor_Dealer__r.Name, IF(ISPICKVAL(Visit_To__c, &apos;Contact&apos;),  Contacts__r.Firm_Name__c, IF(ISPICKVAL(Visit_To__c, &apos;Project&apos;),  Project_Name__r.Name,&apos; &apos;))))</formula>
    <label>Party Name</label>
    <type>Text</type>
</CustomField>