Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Visit_To__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Approval for Ashirvad Brand</fullName>
            </value>
            <value>
                <fullName>Building Relationship</fullName>
            </value>
            <value>
                <fullName>Complaints - Aqua</fullName>
            </value>
            <value>
                <fullName>Complaints - Column</fullName>
            </value>
            <value>
                <fullName>Complaints - CPVC</fullName>
            </value>
            <value>
                <fullName>Complaints - SWR</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Enquiry follow Up</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>New Order Booking</fullName>
            </value>
            <value>
                <fullName>Order Follow up</fullName>
            </value>
            <value>
                <fullName>Payment Follow up</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Promotional Activities</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Market Survey</fullName>
            </value>
            <value>
                <fullName>Lead Follow Up</fullName>
            </value>
            <value>
                <fullName>New Order Booking -SWR</fullName>
            </value>
            <value>
                <fullName>New Order Booking - Column</fullName>
            </value>
            <value>
                <fullName>New Order Booking - CPVC</fullName>
            </value>
            <value>
                <fullName>Project Order follow up</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>