Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Raised_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Raised_Complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raised Complaint</label>
    <type>Checkbox</type>
</CustomField>