Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <type>TextArea</type>
</CustomField>