Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Report_to_Management__c.field-meta.xml
<CustomField>
    <fullName>Report_to_Management__c</fullName>
    <label>Report to Management</label>
    <type>TextArea</type>
</CustomField>