Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
                <color>#FF6600</color>
                <label>Others</label>
            </value>
            <value>
                <fullName>Call Completed</fullName>
                <color>#78C953</color>
                <label>Call Completed</label>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
                <color>#FFCC33</color>
                <label>Not Reachable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>