Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Suggestion_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Remarks__c</fullName>
    <label>Suggestion Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>