Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <label>Suggestions</label>
    <type>TextArea</type>
</CustomField>