Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Total_no_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_attendees__c</fullName>
    <label>Total no:of attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>