Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Tour_Plan__c.field-meta.xml
<CustomField>
    <fullName>Tour_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour Plan</label>
    <referenceTo>Tour_Plan__c</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>