Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Visit_To__c.field-meta.xml
<CustomField>
    <fullName>Visit_To__c</fullName>
    <label>Visit To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>