Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Visited_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Visited_Party_Type__c</fullName>
    <formula>IF(ISPICKVAL(Visit_To__c,&apos;Contact&apos;), Text(Contacts__r.Type__c),IF(ISPICKVAL(Visit_To__c,&apos;Project&apos;), Text( Project_Name__r.Type__c)  &amp; &quot;Project&quot;, Text(Distributor_Dealer__r.Type__c)))</formula>
    <label>Visited Party Type</label>
    <type>Text</type>
</CustomField>