Partial_14Dec2021/force-app/main/default/objects/Visit__c/fields/Worked_with__c.field-meta.xml
<CustomField>
    <fullName>Worked_with__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worked with</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>