Partial_14Dec2021/force-app/main/default/objects/Visit__c/recordTypes/Non_Visit.recordType-meta.xml
<RecordType>
    <fullName>Non_Visit</fullName>
    <active>true</active>
    <label>Non Visit</label>
</RecordType>