Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Date_of_Next_Visit.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Next_Visit</fullName>
    <active>false</active>
    <errorConditionFormula>Date_of_Next_Visit__c &lt;= Today()</errorConditionFormula>
    <errorDisplayField>Date_of_Next_Visit__c</errorDisplayField>
    <errorMessage>Date of Next Visit Cannot today&apos;s date or a date in past</errorMessage>
</ValidationRule>