Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Missing_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Contacts</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Visit_To__c, &apos;Contact&apos;) &amp;&amp; ISBLANK(Contacts__c) &amp;&amp;  $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Contacts__c</errorDisplayField>
    <errorMessage>Please Enter Contact Name</errorMessage>
</ValidationRule>