Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Missing_Distributor_Dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Distributor_Dealer</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Visit_To__c, &apos;Distributor/Dealer&apos;) &amp;&amp; ISBLANK(Distributor_Dealer__c)&amp;&amp; $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Distributor_Dealer__c</errorDisplayField>
    <errorMessage>Please Enter Distributor or Dealer</errorMessage>
</ValidationRule>