Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Missing_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Project</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Visit_To__c, &apos;Project&apos;) &amp;&amp; ISBLANK(Project_Name__c) &amp;&amp; $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Project_Name__c</errorDisplayField>
    <errorMessage>Please Enter Project Name</errorMessage>
</ValidationRule>