Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Order_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Booking</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(text(Purpose_of_Visit__c),&apos;New Order Booking&apos;) &amp;&amp; ISBLANK(Order_Value__c)

/*
ISPICKVAL(Purpose_of_Visit__c, &apos;New Order Booking&apos;) &amp;&amp; ISBLANK(Order_Value__c)
*/</errorConditionFormula>
    <errorDisplayField>Order_Value__c</errorDisplayField>
    <errorMessage>Please enter order value</errorMessage>
</ValidationRule>