Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Order_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Value</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Purpose_of_Visit__c, &apos;New Order Booking&apos;) &amp;&amp; (Order_Value__c  &lt; 5000)&amp;&amp; $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Order_Value__c</errorDisplayField>
    <errorMessage>Order value cannot be less than 5000</errorMessage>
</ValidationRule>