Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Other_Reason_for_Non_Visit.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reason_for_Non_Visit</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Reason_for_Non_Visit__c,&apos;Other&apos;)&amp;&amp; $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Reason_for_Non_Visit__c</errorDisplayField>
    <errorMessage>You are not allowed to select &apos;Other&apos;. Please choose a proper reason.</errorMessage>
</ValidationRule>