Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Remarks_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Remarks__c )&amp;&amp; $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Remarks__c</errorDisplayField>
    <errorMessage>Remarks Filed is Mandatory</errorMessage>
</ValidationRule>