Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Visit_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date</fullName>
    <active>true</active>
    <description>Block entering future visit dates</description>
    <errorConditionFormula>Date__c &gt; TODAY()&amp;&amp; $User.TL__c !=TRUE</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>You can&apos;t enter future dates...</errorMessage>
</ValidationRule>