Partial_14Dec2021/force-app/main/default/objects/Visit__c/validationRules/Visit_Date_More_Than_A_Days_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_More_Than_A_Days_in_Past</fullName>
    <active>true</active>
    <errorConditionFormula>(($User.HO__c==TRUE)&amp;&amp; Date__c &lt; Today()- 4) ||
(($User.HO__c!=TRUE)&amp;&amp; (TODAY()- Date__c) &gt; 1) 



/*IF($UserRole.Name =&apos;AshirvadHO&apos;,(TODAY()- Date__c) &lt; 4 , Date__c&lt; Today()- 1) 


Date__c&gt; Today()-4, Date__c&lt; Today()- 1)*/</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Visit date cannot be more than a day in the past from today&apos;s date</errorMessage>
</ValidationRule>